Fix padding & alignment in navbar

--- a/assignment-5/styles/a5-navbar.css
+++ b/assignment-5/styles/a5-navbar.css
@@ -1,7 +1,8 @@
 .a5-navbar {
     display: flex;
-    padding: 2% 14%;
+    padding: 1% 14%;
     font-size: 18px;
+    align-items: center;
 }
 
 .a5-logo {
